<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">
    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/passosync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/welocme"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGlad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWelcome"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/glad"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <EditText
            android:textSize="@dimen/_14sdp"
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGlad"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/name"
            android:backgroundTint="@color/white"
            android:maxLength="30"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/white" />

        <EditText
            android:textSize="@dimen/_14sdp"
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edName"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/email"
            android:maxLength="30"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />


        <EditText
            android:textSize="@dimen/_14sdp"
            android:id="@+id/edPass"
            android:maxLength="30"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmail"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPass"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ripple_effect"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogin"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/login"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/item_background"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"/>
    </RelativeLayout>


</RelativeLayout>
</layout>